--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
+    "deploy": "heroku builds:create -a insta-vue1",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/firestore": "^4.2.0",
+    "busboy": "^0.3.1",
     "express": "^4.17.1",
     "firebase-admin": "^9.2.0",
     "nodemon": "^2.0.4"
